--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# OS / IDE
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+
+# Python packaging
+build/
+dist/
+*.egg-info/
+
+# Streamlit cache
+.streamlit/
+
+# Local artifacts and temp uploads
+artifacts/
+.tmp_uploads/
+sample_data/resumes/
+
+# Logs
+*.log
+
 # Python
 __pycache__/
 *.py[cod]
